Manutenção no layout da pagina inicial

--- a/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/HomePage.html
+++ b/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/HomePage.html
@@ -2,11 +2,11 @@
 <html xmlns:wicket="http://wicket.apache.org">
 <head>
 <meta charset="utf-8" />
-<title>Distancia Certa</title>
+<title>Horse Informática</title>
 <link href="bootstrap.css" rel="stylesheet">
 
 </head>
-<body>
+<body background="img/bg-horseInfo.png">
 	<form class="form-inline" wicket:id="formularioPrincipal">
 		<div wicket:id="mensagem"></div>
 		<div id="divLoginSystem" align="right">
