Inicio do Crud - Realização do cadastro

--- a/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/main/HomePage.html
+++ b/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/main/HomePage.html
@@ -42,6 +42,13 @@
 						<input id="inputNasc" maxlength="10" wicket:id="dataNascimento" type="text" />
 					</div>
 				</div>
+				
+				<div class="control-group">
+					<label class="control-label" wicket:for="rg">RG:</label>
+					<div class="controls">
+						<input id="inputCpf" maxlength="13" wicket:id="rg" type="text" />
+					</div>
+				</div>
 
 				<div class="control-group">
 					<label class="control-label" wicket:for="cpf">CPF:</label>
