--- a/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/AdministradorProdutoPage.html
+++ b/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/AdministradorProdutoPage.html
@@ -42,7 +42,7 @@
 			<div class="control-group">
 				<label class="control-label" for="singlebutton"></label>
 				<div class="controls">
-					<input wicket:id="cadastrar" type="submit" valur="Cadastrar"
+					<input wicket:id="cadastrar" type="submit" value="Cadastrar"
 						class="btn btn-primary"></input>
 				</div>
 			</div>
