Implementação da logica do login do administrador e surgimento do botão Sair

--- a/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/AdministradorProdutoPage.html
+++ b/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/AdministradorProdutoPage.html
@@ -1,11 +1,11 @@
 <wicket:extend>
 	<form wicket:id="formAdmProduto" class="form-horizontal">
-		<fieldset>
+		<fieldset id="fieldsetCadastroProduto">
 
 			<div wicket:id="mensagens"></div>
 
 			<!-- Form Name -->
-			<legend>Cadastro de Produtos</legend>
+			<legend id="tituloFormProduto">Cadastro de Produtos</legend>
 
 			<!-- Text input-->
 			<div class="control-group">
