--- a/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/base/BasePage.html
+++ b/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/base/BasePage.html
@@ -16,6 +16,10 @@
 				<li><a wicket:id="acessorios">Acessórios</a></li>
 				<input id="searchInput" type="text" class="search-query" placeholder="Busca"/>
 			</ul>
+			<ul class="nav">
+				<li wicket:id="saudacaoCliente"></li>
+				<li><a wicket:id="sair">Sair</a></li>
+			</ul>
 		</div>
 	</div>
 	<wicket:child/>
