Ajustes na saudação do cliente e implementação do botão Sair tambem na area do administrador

--- a/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/AdministradorPage.html
+++ b/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/AdministradorPage.html
@@ -16,6 +16,9 @@
 				<li><a wicket:id="acessorios">Acessórios</a></li> -->
 				<input id="searchInput" type="text" class="search-query" placeholder="Busca"/>
 			</ul>
+			<ul class="nav">
+				<li><a wicket:id="sair">Sair</a></li>
+			</ul>
 		</div>
 	</div>
 	<wicket:child/>
