--- a/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/base/BasePage.html
+++ b/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/base/BasePage.html
@@ -17,7 +17,7 @@
 				<input id="searchInput" type="text" class="search-query" placeholder="Busca"/>
 			</ul>
 			<ul class="nav">
-				<li wicket:id="saudacaoCliente"></li>
+				<li><a wicket:id="saudacaoCliente"></a></li>
 				<li><a wicket:id="sair">Sair</a></li>
 			</ul>
 		</div>
