--- a/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/produtos/AcessoriosPage.html
+++ b/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/produtos/AcessoriosPage.html
@@ -1,3 +1,3 @@
 <wicket:extend>
-	<h1>Bem-Vindo a sessão de Acessorios</h1>
+	<h1 id="tituloAcessorios">Bem-Vindo a sessão de Acessorios</h1>
 </wicket:extend>
