--- a/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/produtos/SmartphonesPage.html
+++ b/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/produtos/SmartphonesPage.html
@@ -1,13 +1,4 @@
 <wicket:extend>
-	<h1>Bem-Vindo a sessão de smartphones</h1>
-
-	<ul class="thumbnails">
-		<li class="span4">
-			<div class="thumbnail">
-				<img src="img/lumia 720.jpg" alt="">
-				<h3>Nokia Lumia 720</h3>
-				<p>Texto do lumia 720...</p>
-			</div>
-		</li>
-	</ul>
+	<h1 id="tituloSmart">Bem-Vindo a sessão de smartphones</h1>
+	<div wicket:id="produtosPanel"></div>
 </wicket:extend>
