Pequena modificação na apresentação dos produtos e criar link no produto

--- a/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/produtos/ProdutoPanel.html
+++ b/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/produtos/ProdutoPanel.html
@@ -1,11 +1,13 @@
 <wicket:panel>
 	<ul wicket:id="produtos" class="thumbnails">
 		<li class="span4">
-			<div class="thumbnail">
-				<li><img wicket:id="imagem" width="200" height="100" alt=""/></li>
-				<li><h5 wicket:id="nome">Nokia Lumia 720</h5></li>
-			</div>
+			<a href="">
+				<div class="thumbnail">
+						<img wicket:id="imagem" width="150" height="75" alt=""/>
+						<h5 wicket:id="nome">Nokia Lumia 720</h5>
+				</div>
+			</a>
 		</li>
 	</ul>
-	<div wicket:id="paginacao"></div>
+	<div align="center" wicket:id="paginacao"></div>
 </wicket:panel>
