--- a/HorseInformatica/src/main/webapp/css/bootstrap.css
+++ b/HorseInformatica/src/main/webapp/css/bootstrap.css
@@ -10,6 +10,10 @@
 
 /* CSS Personalizado */
 
+a:hover {
+	text-decoration: none;
+}
+
 #divLoginSystem {
 	margin-top: 10px;
 	padding-right: 10px;
