Criação do Tipo do produto, e adição de campos de seleção em tipo e ddd

--- a/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/AdministradorProdutoPage.html
+++ b/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/AdministradorProdutoPage.html
@@ -17,6 +17,16 @@
 				</div>
 			</div>
 
+			<!-- Text input-->
+			<div class="control-group">
+				<label class="control-label" wicket:for="tipo">Tipo:</label>
+				<div class="controls">
+				
+					<select wicket:id="tipo"></select>
+
+				</div>
+			</div>
+			
 			<!-- Prepended text-->
 			<div class="control-group">
 				<label class="control-label" wicket:for="valor">Valor:</label>
