--- a/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/contato/CadastroContatoPage.html
+++ b/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/contato/CadastroContatoPage.html
@@ -60,7 +60,7 @@
 				<div class="control-group">
 					<label class="control-label" wicket:for="ddd">DDD:</label>
 					<div class="controls">
-						<input wicket:id="ddd" type="text" />
+						<select wicket:id="ddd"></select>
 					</div>
 				</div>
 
