Finalização da area de clientes do administrador

--- a/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/AdministradorPage.html
+++ b/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/AdministradorPage.html
@@ -12,8 +12,8 @@
 			<a class="brand" href="#">Horse Informática</a>
 			<ul class="nav">
 				<li><a wicket:id="produtos">Produtos</a></li>
-				<!-- <li><a wicket:id="computadores">Computadores</a></li>
-				<li><a wicket:id="acessorios">Acessórios</a></li> -->
+				<li><a wicket:id="clientes">Clientes</a></li>
+				<!--<li><a wicket:id="acessorios">Acessórios</a></li> -->
 				<input id="searchInput" type="text" class="search-query" placeholder="Busca"/>
 			</ul>
 			<ul class="nav">
