Manuntenção nos tipos de produtos

--- a/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/produtos/AcessoriosPage.html
+++ b/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/produtos/AcessoriosPage.html
@@ -1,3 +1,4 @@
 <wicket:extend>
 	<h1 id="tituloAcessorios">Bem-Vindo a sessão de Acessorios</h1>
+	<div wicket:id="produtosPanel"></div>
 </wicket:extend>
