--- a/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/produtos/ComputadoresPage.html
+++ b/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/produtos/ComputadoresPage.html
@@ -1,3 +1,4 @@
 <wicket:extend>
 	<h1 id="tituloComp">Bem-Vindo a sessão de computadores</h1>
+	<div wicket:id="produtosPanel"></div>
 </wicket:extend>
