Implementação do novo modelo de armazenamento de imagens, armazenamento em um diretorio dentro do projeto com nome de imagens/produtos e armazenamento apenas do caminho no banco de dados. Atenção: Mudar a coluna imagem da tabela produto no banco de dados para receber um varchar agr ao inves de bytes, segue o script para mudança: "alter table tb_produto change imagem imagem varchar(150) not null"

--- a/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/produtos/ProdutoPanel.html
+++ b/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/produtos/ProdutoPanel.html
@@ -4,7 +4,7 @@
 			<a href="">
 				<div class="thumbnail">
 						<img wicket:id="imagem" width="150" height="75" alt=""/>
-						<h5 wicket:id="nome">Nokia Lumia 720</h5>
+						<h5 wicket:id="nome"></h5>
 				</div>
 			</a>
 		</li>
