Validação dos campos da pagina de Contato e manuntenção do nullPointer que dava ao termino do cadastro do cliente

--- a/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/main/HomePage.html
+++ b/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/main/HomePage.html
@@ -10,13 +10,15 @@
 	<form class="form-inline" wicket:id="formularioPrincipal">
 		<div wicket:id="mensagem"></div>
 		<div id="divLoginSystem" align="right">
-
-			<label wicket:for="login">Login:</label> <input type="text"
-				wicket:id="login" /> <label wicket:for="senha">Senha:</label> <input
-				type="password" wicket:id="senha" /> <input class="btn btn-success"
-				type="submit" wicket:id="entrar" value="Entrar" />
+		
+			<label wicket:for="login">Login:</label> 
+			<input type="text"	wicket:id="login" /> 
+			<label wicket:for="senha">Senha:</label> 
+			<input type="password" wicket:id="senha" /> 
+			<input class="btn btn-success" type="submit" wicket:id="entrar" value="Entrar" />
+			
 		</div>
-		<hr />
+			<hr />
 		<fieldset>
 
 			<legend id="leg">Cadastre-se</legend>
@@ -60,14 +62,14 @@
 				<div class="control-group">
 					<label class="control-label" wicket:for="loginCadastro">Login:</label>
 					<div class="controls">
-						<input type="text" wicket:id="loginCadastro" />
+						<input maxlength="20" type="text" wicket:id="loginCadastro" />
 					</div>
 				</div>
 
 				<div class="control-group">
 					<label class="control-label" wicket:for="senhaCadastro">Senha:</label>
 					<div class="controls">
-						<input wicket:id="senhaCadastro" type="text" />
+						<input maxlength="20" wicket:id="senhaCadastro" type="text" />
 					</div>
 				</div>
 
