Implementação da opção excluir na grid de clientes do administrador, e implementação da geração do relatorio de clientes, se poder dar uma incrementada no relatorio e deixar mais bonito fique a vontade meu chapa =D

--- a/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/AdministradorClientePanel.html
+++ b/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/AdministradorClientePanel.html
@@ -5,6 +5,7 @@
 			<th>Cpf</th>
 			<th>Perfil</th>
 			<th>Telefone</th>
+			<th>Ações</th>
 		</thead>
 		<tbody>
 			<tr wicket:id="clientes">
@@ -12,9 +13,12 @@
 				<td><span wicket:id="cpf"></span></td>
 				<td><span wicket:id="perfil"></span></td>
 				<td><span wicket:id="telefone"></span></td>
+				<td>
+					<a wicket:id="excluir">Excluir</a>
+				</td>
 				</tr>
 		</tbody>
 	</table>
-	<div wicket:id="paginacao">
+	<div align="center" wicket:id="paginacao">
 		</div>
 </wicket:panel>
