--- a/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/AdministradorClientePage.html
+++ b/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/AdministradorClientePage.html
@@ -12,7 +12,9 @@
 				<label class="control-label" for="textinput">Nome:</label>
 				<div class="controls">
 					<input wicket:id="nomeCliente" type="text" placeholder="Insira o nome do cliente..." class="input-xlarge"/>
+					<input type="submit" value="Gerar Relatório de Clientes" class="btn btn-primary" wicket:id="btRelatorio"/>
 				</div>
+				
 			</div>
 
 			<!-- Button -->
