Mudança no layout da opção excluir da grid, antes link agora botão

--- a/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/AdministradorClientePanel.html
+++ b/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/AdministradorClientePanel.html
@@ -14,7 +14,7 @@
 				<td><span wicket:id="perfil"></span></td>
 				<td><span wicket:id="telefone"></span></td>
 				<td>
-					<a wicket:id="excluir">Excluir</a>
+					<button class="btn btn-small btn btn-danger" wicket:id="excluir">Excluir</button>
 				</td>
 				</tr>
 		</tbody>
