Implementação do botão para HomePage

--- a/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/AdministradorBasePage.html
+++ b/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/AdministradorBasePage.html
@@ -9,7 +9,7 @@
 <body background="img/bg-horseInfo.png">
 	<div class="navbar navbar-inverse">
 		<div class="navbar-inner">
-			<a class="brand" href="#">Horse Informática</a>
+			<a wicket:id="homeAdm" class="brand">Horse Informática</a>
 			<ul class="nav">
 				<li><a wicket:id="produtos">Produtos</a></li>
 				<li><a wicket:id="clientes">Clientes</a></li>
