--- a/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/base/BasePage.html
+++ b/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/base/BasePage.html
@@ -9,7 +9,7 @@
 <body background="img/bg-horseInfo.png">
 	<div class="navbar navbar-inverse">
 		<div class="navbar-inner">
-			<a class="brand" href="#">Horse Informática</a>
+			<a class="brand" wicket:id="homeCliente">Horse Informática</a>
 			<ul class="nav">
 				<li><a wicket:id="smartphones">Smartphones</a></li>
 				<li><a wicket:id="computadores">Computadores</a></li>
