Pequenas alterações de alinhamento no layout da pagina de clientes do Adm

--- a/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/AdministradorClientePage.html
+++ b/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/AdministradorClientePage.html
@@ -5,7 +5,7 @@
 		<fieldset>
 
 			<!-- Form Name -->
-			<legend align="center">Consulta de Clientes</legend>
+			<legend class="PaddingUmSextoADireita">Consulta de Clientes</legend>
 
 			<!-- Text input-->
 			<div class="control-group">
