Criação da opção de detalhes na grid de clientes com varias informações do cliente inclusive o tempo decadastro calculado e a idade calculada a partir da data de cadastro e data de nascimento.

--- a/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/AdministradorClientePage.html
+++ b/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/AdministradorClientePage.html
@@ -26,6 +26,7 @@
 			</div>
 
 		</fieldset>
+	<div wicket:id="modalDetalhes"></div>
 	<div wicket:id="panelClientes"></div>
 	</form>
 </wicket:extend>
