--- a/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/AdministradorClientePanel.html
+++ b/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/AdministradorClientePanel.html
@@ -15,6 +15,7 @@
 				<td class="centralizarTexto"><span wicket:id="perfil"></span></td>
 				<td class="centralizarTexto"><span wicket:id="telefone"></span></td>
 				<td class="centralizarTexto"><button class="btn btn-small btn btn-danger" wicket:id="excluir">Excluir</button></td>
+				<td class="centralizarTexto"><button class="btn btn-small btn btn-danger" wicket:id="detalhes">Detalhes</button></td>
 				<td class="centralizarTexto"><input type="checkbox" wicket:id="selecionar"/></td>
 				</tr>
 		</tbody>
