--- a/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/ModalDetailPanel.html
+++ b/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/ModalDetailPanel.html
@@ -1,6 +1,6 @@
 <wicket:panel>
-	<fieldset>
-	<legend>Dados Pessoais</legend>
+	<fieldset class="centralizarTexto">
+	<legend class="centralizarTexto">Dados Pessoais</legend>
 		<label class="label">Nome:</label>
 		<label wicket:id="nome"/>
 		<label class="label">Sexo:</label>
@@ -17,16 +17,16 @@
 		<label wicket:id="tempoCliente"/>
 	</fieldset>
 	
-	<fieldset>
-	<legend>Endereço</legend>
+	<fieldset class="centralizarTexto">
+	<legend class="centralizarTexto">Endereço</legend>
 		<label class="label">Logradouro:</label>
 		<label wicket:id="logradouro"/>
 		<label class="label">Bairro:</label>
 		<label wicket:id="bairro"/>
 	</fieldset>
 	
-	<fieldset>
-	<legend>Contato</legend>
+	<fieldset class="centralizarTexto">
+	<legend class="centralizarTexto">Contato</legend>
 		<label class="label">Telefone:</label>
 		<label wicket:id="telefone"/>
 		<label class="label">Email:</label>
