Alterações de rotina

--- a/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/AdministradorClientePanel.html
+++ b/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/AdministradorClientePanel.html
@@ -5,7 +5,7 @@
 			<th class="centralizarTexto">Cpf</th>
 			<th class="centralizarTexto">Perfil</th>
 			<th class="centralizarTexto">Telefone</th>
-			<th class="centralizarTexto">Ações</th>
+			<th colspan="1" class="centralizarTexto">Ações</th>
 			<th class="centralizarTexto">Selecionar</th>
 		</thead>
 		<tbody>
