--- a/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/ModalDetailPanel.html
+++ b/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/ModalDetailPanel.html
@@ -1,6 +1,6 @@
 <wicket:panel>
 	<fieldset>
-	<legend>Dados Pessoais</legend>
+	<legend class="centralizarTexto">Dados Pessoais</legend>
 		<label class="label">Nome:</label>
 		<label wicket:id="nome"/>
 		<label class="label">Sexo:</label>
@@ -18,7 +18,7 @@
 	</fieldset>
 	
 	<fieldset>
-	<legend>Endereço</legend>
+	<legend class="centralizarTexto">Endereço</legend>
 		<label class="label">Logradouro:</label>
 		<label wicket:id="logradouro"/>
 		<label class="label">Bairro:</label>
@@ -26,7 +26,7 @@
 	</fieldset>
 	
 	<fieldset>
-	<legend>Contato</legend>
+	<legend class="centralizarTexto">Contato</legend>
 		<label class="label">Telefone:</label>
 		<label wicket:id="telefone"/>
 		<label class="label">Email:</label>
