Atualização de clientes passa a ser na base page com a criação do botão de ações que possui Configurações da conta e Sair

--- a/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/AdministradorAtualizaClientePage.html
+++ b/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/AdministradorAtualizaClientePage.html
@@ -76,6 +76,35 @@
 					</div>
 				</div>
 
+
+            <!-- Text input-->
+                <div class="control-group">
+                    <label class="control-label" wicket:for="login">Login: </label>
+                    <div class="controls">
+                        <input wicket:id="login" name="login" type="text"
+                            placeholder="Digite seu login" class="input-large">
+
+                    </div>
+                </div>
+                
+                    <!-- Text input-->
+                <div class="control-group">
+                    <label class="control-label" wicket:for="senhaAtual">Senha atual: </label>
+                    <div class="controls">
+                        <input wicket:id="senhaAtual" name="senhaAtual" type="text"
+                            placeholder="Digite sua senha atual" class="input-large">
+                    </div>
+                </div>
+                
+                   <!-- Text input-->
+                <div class="control-group">
+                    <label class="control-label" wicket:for="senha">Senha: </label>
+                    <div class="controls">
+                        <input wicket:id="senha" name="senha" type="text"
+                            placeholder="Digite sua senha" class="input-large">
+                    </div>
+                </div>
+                
 			</fieldset>
 
 			<fieldset>
