Pequenas modificações na pagina de atualizar cliente, verificando os campos de senha

--- a/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/AdministradorAtualizaClientePage.html
+++ b/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/AdministradorAtualizaClientePage.html
@@ -91,7 +91,7 @@
                 <div class="control-group">
                     <label class="control-label" wicket:for="senhaAtual">Senha atual: </label>
                     <div class="controls">
-                        <input wicket:id="senhaAtual" name="senhaAtual" type="text"
+                        <input wicket:id="senhaAtual" name="senhaAtual" type="password"
                             placeholder="Digite sua senha atual" class="input-large">
                     </div>
                 </div>
@@ -100,7 +100,7 @@
                 <div class="control-group">
                     <label class="control-label" wicket:for="senha">Senha: </label>
                     <div class="controls">
-                        <input wicket:id="senha" name="senha" type="text"
+                        <input wicket:id="senha" name="senha" type="password"
                             placeholder="Digite sua senha" class="input-large">
                     </div>
                 </div>
