--- a/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/AdministradorClientePanel.html
+++ b/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/AdministradorClientePanel.html
@@ -12,7 +12,7 @@
 			<tr wicket:id="clientes">
 				<td class="centralizarTexto"><span wicket:id="nome"></span></td>
 				<td class="centralizarTexto"><span wicket:id="cpf"></span></td>
-				<td class="centralizarTexto"><select wicket:id="perfil"></select></td>
+				<td class="centralizarTexto"><select class="larguraDrop" wicket:id="perfil"></select></td>
 				<td class="centralizarTexto"><span wicket:id="telefone"></span></td>
 				<td class="centralizarTexto"><button class="btn btn-small btn btn-danger" wicket:id="excluir">Excluir</button>
 				<button class="btn btn-small btn-primary" wicket:id="atualizar">Atualizar</button>
