--- a/HorseInformatica/src/main/webapp/css/bootstrap.css
+++ b/HorseInformatica/src/main/webapp/css/bootstrap.css
@@ -14,6 +14,10 @@ a:hover {
 	text-decoration: none !important;
 }
 
+.larguraDrop{
+	width: 100px;
+}
+
 .centralizarTexto{
 	text-align: center !important;
 }
