--- a/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/produtos/ProdutoPanel.html
+++ b/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/produtos/ProdutoPanel.html
@@ -1,10 +1,12 @@
 <wicket:panel>
-	<ul wicket:id="produtos" class="thumbnails">
-		<li class="span4">
+	<ul id="produtoContainer" wicket:id="produtos" class="thumbnails">
+		<li class="span3">
 			<a href="">
 				<div class="thumbnail">
 						<img wicket:id="imagem" width="150" height="75" alt=""/>
 						<h5 wicket:id="nome"></h5>
+						<label>Preço: </label>
+						<label wicket:id="preco"></label>
 				</div>
 			</a>
 		</li>
