alterações de rotina

--- a/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/AdministradorAtualizaClientePage.html
+++ b/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/AdministradorAtualizaClientePage.html
@@ -12,7 +12,7 @@
 		<fieldset>
 
 			<!-- Form Name -->
-			<legend>Atualizar clientes</legend>
+			<legend class="centralizarTexto">Configurações da Conta</legend>
 			<label wicket:id="mensagem"></label>
 
 	<div id="divFormRegister" class="container-fluid form-horizontal">
@@ -30,7 +30,7 @@
 			</div>
 
 			<fieldset>
-				<legend>Dados Pessoais</legend>
+				<legend class="centralizarTexto">Dados Pessoais</legend>
 				<!-- Text input-->
 				<div class="control-group">
 					<label class="control-label" wicket:for="nome">Nome: </label>
@@ -108,7 +108,7 @@
 			</fieldset>
 
 			<fieldset>
-				<legend>Contato</legend>
+				<legend class="centralizarTexto">Contato</legend>
 				<!-- Text input-->
 				<div class="control-group">
 					<label class="control-label" wicket:for="telefone">Telefone:</label>
@@ -149,7 +149,7 @@
 			</fieldset>
 
 			<fieldset>
-				<legend>Endereço</legend>
+				<legend class="centralizarTexto">Endereço</legend>
 				<!-- Text input-->
 				<div class="control-group">
 					<label class="control-label" wicket:for="cep">Cep: </label>
