--- a/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/AdministradorAtualizaClientePage.html
+++ b/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/administrador/AdministradorAtualizaClientePage.html
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html xmlns:wicket="http://wicket.apache.org">
-<head>
-<meta charset="utf-8" />
-<title>Horse Informática</title>
-<link href="bootstrap.css" rel="stylesheet">
-</head>
-
-<body background="img/bg-horseInfo.png">
+<wicket:extend>
 
 	<form class="form-inline" wicket:id="formularioAtualizar">
 		<fieldset>
@@ -214,5 +206,4 @@
 		</fieldset>
 	</form>
 	
-</body>
-</html>
+</wicket:extend>
