--- a/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/base/BasePage.html
+++ b/HorseInformatica/src/main/webapp/br/com/horseInformatica/view/base/BasePage.html
@@ -21,7 +21,8 @@
 				<li><a wicket:id="saudacaoCliente"></a></li>
 			</ul>
 			
-			 <div class="btn-group">
+			<div class = "centralizarAcao">
+			 <div class = "btn-group">
                 <a class="btn-small btn-inverse dropdown-toggle" data-toggle="dropdown" href="#">
                     Ação <span class="caret"></span>
                 </a>
@@ -30,6 +31,7 @@
                     <li><a wicket:id="sair">Sair</a></li>
                     <!-- Links de menu dropdown -->
                 </ul>
+            </div>
             </div>
 		</div>
 	</div>
